Updates from Overleaf

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-We use angular clustering of luminous red galaxies from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over 12 million targets, covering 14,000 square degrees of the sky, with redshifts in the range $0.2< z < 1.35$. We identify Galactic extinction, survey depth, and astronomical seeing as the primary sources of systematic error, and employ linear regression and artificial neural networks to alleviate non-cosmological excess clustering on large scales. Our methods are tested against log-normal simulations with and without $\fnl$ and systematics, showing superior performance of the neural network treatment in reducing remaining systematics. Assuming the universality relation, we find \mout{$\fnl = 47^{+14(+29)}_{-11(-22)}$}\mr{$\fnl = 46^{+15(+30)}_{-13(-25)}$} at 68\%(95\%) confidence. \mout{With a more aggressive treatment, including regression against the full set of imaging maps, our maximum likelihood value shifts slightly to $\fnl \sim 50$ and the uncertainty on $\fnl$ increases due to the removal of large-scale clustering information.} We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales used) that show consistency in the obtained constraints. \mout{Despite extensive efforts to mitigate systematics, our measurements indicate $\fnl > 0$ with a $99.9$ percent confidence level. This outcome raises concerns as it could be attributed to unforeseen systematics, including calibration errors or uncertainties associated with low-$\ell$ systematics in the extinction template. Alternatively, it could suggest a scale-dependent $\fnl$ model--causing significant non-Gaussianity around large-scale structure while leaving cosmic microwave background scales unaffected.} Our results encourage further studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
+\mc{Needs to be re-written} We use angular clustering of luminous red galaxies from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over 12 million targets, covering 14,000 square degrees of the sky, with redshifts in the range $0.2< z < 1.35$. We identify Galactic extinction, survey depth, and astronomical seeing as the primary sources of systematic error, and employ linear regression and artificial neural networks to alleviate non-cosmological excess clustering on large scales. Our methods are tested against log-normal simulations with and without $\fnl$ and systematics, showing superior performance of the neural network treatment in reducing remaining systematics. Assuming the universality relation, we find \mout{$\fnl = 47^{+14(+29)}_{-11(-22)}$}\mr{$\fnl = 46^{+15(+30)}_{-13(-25)}$} at 68\%(95\%) confidence. \mout{With a more aggressive treatment, including regression against the full set of imaging maps, our maximum likelihood value shifts slightly to $\fnl \sim 50$ and the uncertainty on $\fnl$ increases due to the removal of large-scale clustering information.} We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales used) that show consistency in the obtained constraints. \mout{Despite extensive efforts to mitigate systematics, our measurements indicate $\fnl > 0$ with a $99.9$ percent confidence level. This outcome raises concerns as it could be attributed to unforeseen systematics, including calibration errors or uncertainties associated with low-$\ell$ systematics in the extinction template. Alternatively, it could suggest a scale-dependent $\fnl$ model--causing significant non-Gaussianity around large-scale structure while leaving cosmic microwave background scales unaffected.} Our results encourage further studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
 \end{abstract}
 
 % \mr{The corresponding large-scale power may stem from unforeseen systematics, including calibration errors or uncertainties associated with low-$\ell$ systematics in the extinction template. The only approaches that yield results consistent with $\fnl=0$ are those that diminish the constraining power of the dataset. For instance, we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ using a more aggressive treatment that involves regression against the full set of imaging maps.}
