--- a/sections/results.tex
+++ b/sections/results.tex
@@ -126,7 +126,7 @@ DECaLS North & Nonlinear Four Maps      & $    30$& $    32$& $    10<\fnl<    5
 DECaLS North (imag. cut) & Nonlinear Nine Maps& $   -16$& $   -20$& $   -47<\fnl<     7$& $   -70<\fnl<    31$ &   36.1\\
 DECaLS North (comp. cut) & Nonlinear Nine Maps& $   -17$& $   -20$& $   -46<\fnl<     5$& $   -68<\fnl<    28$ &   42.7\\
 DECaLS North (no DEC cut) & Nonlinear Nine Maps& $     0$& $   -13$& $   -43<\fnl<    15$& $   -67<\fnl<    38$ &   44.2\\
-DECaLS North & Nonlinear 11 Maps        & $    -2$& $    -7$& $   -32<\fnl<    16$& $   -54<\fnl<    39$ &   40.0\\
+DECaLS North & Nonlinear Nine++ Maps        & $    -2$& $    -7$& $   -32<\fnl<    16$& $   -54<\fnl<    39$ &   40.0\\
    \hline
 DECaLS South & Nonlinear Three Maps     & $    30$& $    31$& $    11<\fnl<    53$& $   -28<\fnl<    76$ &   30.2\\
 DECaLS South & Nonlinear Four Maps      & $   -42$& $    -5$& $   -44<\fnl<    27$& $   -70<\fnl<    49$ &   33.4\\
@@ -134,7 +134,7 @@ DECaLS South & Nonlinear Four Maps      & $   -42$& $    -5$& $   -44<\fnl<    2
 DECaLS South (imag. cut) & Nonlinear Nine Maps& $   -57$& $   -55$& $   -76<\fnl<   -36$& $   -96<\fnl<    -8$ &   30.0\\
 DECaLS South (comp. cut) & Nonlinear Nine Maps& $   -42$& $   -40$& $   -58<\fnl<   -22$& $   -76<\fnl<    -1$ &   30.4\\
 DECaLS South (no DEC cut) & Nonlinear Nine Maps& $    -2$& $   -10$& $   -31<\fnl<    10$& $   -50<\fnl<    26$ &   26.1\\
-DECaLS South & Nonlinear 11 Maps        & $   -38$& $   -35$& $   -52<\fnl<   -16$& $   -70<\fnl<     5$ &   32.3\\    
+DECaLS South & Nonlinear Nine++ Maps        & $   -38$& $   -35$& $   -52<\fnl<   -16$& $   -70<\fnl<     5$ &   32.3\\    
    \hline
     \end{tabular}}
 \end{table*}
