--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -62,7 +62,7 @@ We convert this convolution in the spherical harmonic space into a multiplicatio
 \begin{align}
     \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm window}~P_{\ell}(\cos\theta) d\cos\theta.
 \end{align}
-\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for the different masks representing the DESI footprint and its imaging sub-regions. We present a benchmark of our method against the direct mode-mode coupling matrix approach in Appendix \ref{ssec:windowconv}.} 
+\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for the different masks representing the DESI footprint and its imaging sub-regions. We benchmark our method against the approach that directly uses the mode-mode coupling matrix in Appendix \ref{ssec:windowconv}.} 
 
 The integral constraint is another systematic effect which is induced since the mean galaxy density is estimated from the observed galaxy density, and therefore is biased by the limited sky coverage \citep{peacock1991large}. To account for the integral constraint, the survey mask power spectrum is used to introduce a scale-dependent correction factor that needs to be subtracted from the power spectrum as,
 \begin{equation}
