--- a/sections/results.tex
+++ b/sections/results.tex
@@ -144,7 +144,7 @@ DECaLS South & Nonlinear Nine++ Maps        & $   -38$& $   -35$& $   -52<\fnl< 
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods1dnoshift.pdf}
-    \caption{Same as Figure \ref{fig:mcmc_dr9} \mr{(top panel)} but without accouting for over-correction. }
+    \caption{Same as Figure \ref{fig:mcmc_dr9} but without accouting for over-correction. }
     \label{fig:mcmcdr9noshift}
 \end{figure}
 
